# FatX-Gui-for-Windows

./: BUILD_WINDOWS.md  CMakeLists.txt  README.md  config.h  fuse.h  setup_build.ps1  win32_compat.h
